# animated_wallpapers_rs

./: Cargo.toml  README.md  build.rs
src/: cli.rs  image_generator.rs  main.rs
test_wp/: test.rn
