[package]
name = "animated_wallpapers_rs"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "animated_wallpapers_cli"
path = "src/cli.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.24"
rune = "0.12"
tokio = { version = "1.28", features = ["full"]  }