[package]
name = "animated_wallpapers_rs"
version = "0.1.0"
edition = "2021"
authors = ["Andrew Chernyakov <chernjakov2@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.24"
rune = "0.12"
tokio = { version = "1.28", features = ["full"]  }
clap = { version = "4.3", features = ["cargo"] }
chrono = "0.4"
winit = "0.28"
egui = "0.22"
egui_winit_platform = "0.19"
egui_wgpu_backend = "0.24"
wallpaper = "3.2"
wgpu = "0.16"
tray-icon = "0.6"
rfd = "0.11"
lazy_static = "1.4"
